<resources>
    <string name="app_name">GTD</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_projects">Projects</string>
    <string name="page_tasks">Tasks</string>
    <string name="page_context">Contexts</string>
    <string name="page_user">User</string>
    <string name="page_filter">Filter</string>
    <string name="page_hierarchy">Hierarchy</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_tasks">Loading tasks failed</string>
    <string name="error_loading_hierarchy">Loading hierarchy failed</string>
    <string name="error_loading_projects">Loading projects failed</string>
    <string name="error_loading_contexts">Loading contexts failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_tasks">No Tasks</string>
    <string name="no_hierarchy">No Hierarchy data</string>
    <string name="no_contexts">No Contexts</string>
    <string name="no_projects">No Projects</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>
    <string name="label_username">User name</string>
    <string name="label_username_create">User name*</string>
    <string name="label_password">Password</string>
    <string name="label_password_create">Password*</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">UserName or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="button_api">Get API response</string>
    <string name="text_api_text">zde bude api</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_unknown">Something is wrong - pls try later.</string>
    <string name="error_enter_value">enter value</string>
    <string name="error_not_found_user">User name does not exist.</string>
    <string name="error_wrong_password">Cannot login, pls check your data.</string>
    <string name="error_window_name">Info</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="required">* required</string>
    <string name="password_check">password check*</string>
    <string name="login_username">username*</string>
    <string name="login_password">password*</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password_mismatch">does not match</string>
    <string name="title_login">Login</string>
    <string name="action_logged">Logged</string>
    <string name="error_value_short">minimum size is</string>
    <string name="error_value_too_long">max length is</string>
    <string name="title_activity_task_aktivity">TaskAktivity</string>
    <string name="taskTitle">Title</string>
    <string name="taskDescription">Description</string>
    <string name="taskContext">Context</string>
    <string name="taskCalendar">Calendar</string>
    <string name="task_edit">Edit</string>
    <string name="task_create">Create</string>
    <string name="task_state_created">created</string>
    <string name="task_state_active">active</string>
    <string name="task_state_calendar">to calendar</string>
    <string name="task_state_done">done</string>
    <string name="title_activity_context">ContextActivity</string>
    <string name="contextName">Name</string>
    <string name="contextsButton">Add</string>
    <string name="taskContextAdd">Add context</string>
    <string name="contextErrorMessage">context error message</string>
    <string name="error_conflict">Conflict with existing data.</string>
    <string name="taskCalendarFrom">Calendar from</string>
    <string name="taskCalendarTo">Calendar to</string>
    <string name="taskState">State</string>
    <string name="taskProject">Parent project</string>
    <string name="taskNote">Note</string>
    <string name="dateTimePickerSet">Set</string>
    <string name="dateTimePickerCancel">Cancel</string>
    <string name="error_fill_from_form">Problem with creating...pls try later.</string>
    <string name="error_fill_from_object">Problem occurred...pls try later.</string>
    <string name="taskFillTestTask">Test values</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="project_title">Title*</string>
    <string name="project_description">Description</string>
    <string name="project_project">Under project</string>
    <string name="project_state">State*</string>
    <string name="project_edit">Edit</string>
    <string name="project_context_add">Context add</string>
    <string name="project_fill_test_project">fill test data</string>
    <string name="project_note">Note</string>
    <string name="project_create">Create</string>
    <string name="project_update">Update</string>
    <string name="project_state_active">active</string>
    <string name="project_state_done">done</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="facebook_app_id">1597950240491583</string>
    <string name="net_not_available">Cannot access internet! Pls. connect you device to the internet.</string>
    <string name="empty_string"/>
    <string name="action_facebook_logged">Facebook logged</string>
    <string name="facebook_error_denied_permissions">You have denied some important permission :%1%s, application needs
        it.
    </string>
    <string name="facebook_error_cannot_obtain_token">Cannot obtain access token, pls try later.</string>
    <string name="facebook_error_cannot_save_token">Cannot save your facebook token, pls try later.</string>
    <string name="facebook_error_facebook_exception">Error during facebook login, pls try later.</string>
    <string name="google_error_cannot_obtain_token">Cannot obtain access token, pls try later.</string>
    <string name="google_error_cannot_save_token">Cannot save your google token, pls try later.</string>
    <string name="google_error_google_exception">Error during google login, pls try later.</string>
    <string name="label_create_account">Create account</string>
    <string name="message_bad_network">Something wrong with network, pls try later.</string>
    <string name="label_password_check">Password check*</string>
    <string name="label_person_name">Name</string>
    <string name="label_person_surname">Surname</string>
    <string name="label_to_sign">Back to sign in</string>
    <string name="message_bad_universal">Something wrong, pls try later.</string>
    <string name="message_bad_restRequest">Something wrong with your action, pls check if you doing right.</string>
    <string name="message_bad_badRequest">Your data are incorrect, pls check them out.</string>
    <string name="label_create_project">Create new</string>
    <string name="label_task_project">Create new</string>
    <string name="project_project_parent">Parent project</string>
    <string name="title_project_create">Create project</string>
    <string name="title_task_create">Create task</string>
    <string name="title_context_create">Create context</string>
    <string name="label_project_delete">Delete</string>
    <string name="label_something_wrong">Something goes wrong, pls try later.</string>
    <string name="label_user_updated">Your person data was updated.</string>
    <string name="task_title">Title*</string>
    <string name="task_description">Description</string>
    <string name="label_task_create">Create</string>
    <string name="label_task_delete">Delete</string>
    <string name="task_update">Update</string>
    <string name="task_date_from">Date from</string>
    <string name="task_date_to">Date to</string>
    <string name="task_note">Note</string>
    <string name="project_context">Context</string>
    <string name="error_date_wrong_format">wrong date</string>
    <string name="error_date_bad_order">dates are in wrong order</string>
    <string name="error_date_something_wrong">something wrong with your dates</string>
    <string name="app_project">Project</string>
    <string name="app_task">Task</string>
    <string name="app_context">Context</string>
    <string name="error_loading_user">Cannot load user data, pls try later.</string>
    <string name="user_person_surname">Surname</string>
    <string name="user_person_name">Name</string>
    <string name="user_password">password*</string>
    <string name="user_username">Username*</string>
    <string name="user_password_check">Password check</string>
    <string name="label_user_update">Update</string>
    <string name="filter_project">Project statuses to show:</string>
    <string name="filter_task">Task status to show:</string>
    <string name="label_filter_task_active">active</string>
    <string name="label_filter_project_show_active">active</string>
    <string name="label_filter_project_show_done">done</string>
    <string name="label_filter_task_show_created">created</string>
    <string name="label_filter_task_show_active">active</string>
    <string name="label_filter_task_show_in_calendar">in calendar</string>
    <string name="label_filter_task_show_done">done</string>
    <string name="label_task_fast_done">make done</string>
    <string name="error_task_fast_done">Something bad occured, pls try later.</string>
    <string name="facebook_title">Login to you facebook account.</string>
    <string name="google_title">Login to you google account.</string>
    <string name="app_facebook">facebook</string>
    <string name="app_google">google</string>
    <string name="task_social_login">Log in:</string>
    <string name="task_social_post">Post to:</string>
    <string name="error_task_post_no_id">Bad task data.</string>
    <string name="task_post_facebook_success">Task was successfully post to you facebook.</string>
    <string name="task_post_already_reported">Task was already reported.</string>
    <string name="message_bad_post_already_reported">Already reported.</string>
    <string name="task_post_google_success">Task was successfully post to you google.</string>
    <string name="project_structure">Hierarchy</string>
    <string name="task_parent">Parent project</string>
</resources>