<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingBottom="5dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:paddingTop="5dp">

    <!--title-->
    <TextView
        android:id="@+id/tv_context_title"
        style="@style/EditTextLabel"
        android:text="@string/task_title"/>

    <EditText
        android:id="@+id/et_context_title"
        style="@style/RequiredEditText"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <Button
        android:id="@+id/b_context_create"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background_states"
        android:onClick="handleAction"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_task_create"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/b_context_delete"
          style="@style/ShadowText"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:minHeight="0dp"
          android:minWidth="0dp"
          android:layout_marginTop="15dp"
          android:background="@drawable/button_delete_background_states"
          android:onClick="handleDelete"
          android:gravity="center"
          android:padding="10dp"
          android:text="@string/label_task_delete"
          android:textColor="@color/text"
          android:textSize="10sp"
          android:textStyle="bold"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          />
    </RelativeLayout>
  </LinearLayout>
</ScrollView>